## Version: $Id$
## 
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change Log:
## 
######################################################################
## 
### Code:

#add_subdirectory(dtkMatrix)
add_subdirectory(dtkDenseVector)

######################################################################
### CMakeLists.txt ends here
